// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiling files (dynamic exports name) exported function 1`] = `
"define(function (require) {
  var exportedfunction = {};
  exportedfunction.foo = foo;

  function foo(a, b) {
    return a + b + internalFunction(a);
  }

  function internalFunction(a) {
    return a;
  }

  return exportedfunction;
});"
`;

exports[`compiling files (dynamic exports name) should rename internal function if same as fileName 1`] = `
"define(function (require) {
  var sameNameAsFunction = {};
  sameNameAsFunction.sameNameAsFunction = _sameNameAsFunction;

  function _sameNameAsFunction() {
    return 10;
  }

  return sameNameAsFunction;
});"
`;

exports[`compiling source (static exports name) exported function 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.foo = foo;

  function foo(a, b) {
    return a + b + internalFunction(a);
  }

  function internalFunction(a) {
    return a;
  }

  return _exports;
});"
`;

exports[`compiling source (static exports name) hooks.js 1`] = `
"(function () {
  'use strict';

  var _hooks = require(\\"hooks\\");

  var _eventsApi = require(\\"/module/server/eventsApi\\");

  var _underscore = require(\\"underscore\\");

  // From https://developer.sitevision.se/docs/webapps/pre-render-hooks
  (0, _hooks.beforeRender)(req => {
    const data = (0, _eventsApi.getEventData)(req.params.eventId);
    req.context.eventData = data; // req.context is propagated to the rendering phase (index.js)
  });
  (0, _hooks.getPageTitle)(req => req.context.eventData.title);
  (0, _hooks.addHeadElement)(req => {
    const description = (0, _underscore.escape)(req.context.eventData.description);
    return \`<meta property=\\"og:description\\" content=\\"\${description}\\">\`;
  });
})();"
`;

exports[`compiling source (static exports name) index.js 1`] = `
"(function () {
  'use strict';

  _exports.index = index;

  var _router = _interopRequireDefault(require(\\"router\\"));

  function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

  function index() {
    _router.default.get(\\"/\\", function (req, res) {
      res.render(\\"/\\", {});
    });
  }

  index();
})();"
`;

exports[`compiling source (static exports name) main.js 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.default = void 0;

  var _Component = _interopRequireDefault(require(\\"Component\\"));

  function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

  /* global _ */
  var _default = _Component.default.extend({
    onRendered: function () {
      console.log(this.state.name); // foo
    },
    // collect the information a component needs from the store
    // always return a new object
    filterState: function (state) {
      return _.extend({}, {
        name: state.name
      });
    }
  });

  _exports.default = _default;
  return _exports.default;
});"
`;

exports[`compiling source (static exports name) server module 1`] = `
"define(function (require) {
  var _exports = {};
  _exports.getPropertyFromCurrentPage = getPropertyFromCurrentPage;
  _exports.add = add;

  var _PortletContextUtil = _interopRequireDefault(require(\\"PortletContextUtil\\"));

  var _Properties = _interopRequireDefault(require(\\"Properties\\"));

  function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

  function getPropertyFromCurrentPage(prop) {
    return _Properties.default.get(_PortletContextUtil.default.getCurrentPage(), prop);
  }

  function add(a, b) {
    return a + b;
  }

  return _exports;
});"
`;
